--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
     "swiper": "^12.0.3",
+    "vite-plugin-pwa": "^1.2.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
